--- a/src/partials/_navbar.scss
+++ b/src/partials/_navbar.scss
@@ -58,6 +58,7 @@
     width: 100%;
     top: -350px;
     transition: all 0.5s ease;
+    z-index: -1;
   }
 
   .nav-menu.active {
